# branchedflowsim

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  install.sh
cmake/: FindFFTW.cmake  doxygen.cmake  sphinx.cmake  util.cmake
python/: CMakeLists.txt  conf.py.in  density_image.py  setup.py  viewvolume.py
python/branchedflowsim/: __init__.py  cmdline_helpers.py  cmdline_helpers_test.py  config.py.in  correlation.py  correlation_test.py  medium.py  medium_test.py  potential.py  potential_test.py  potgen.py  potgen_test.py  test_utils.py  tracer.py  tracer_test.py
python/branchedflowsim/incoming/: incoming.py
python/branchedflowsim/io/: __init__.py  data_spec.py  data_spec_test.py  io_test.py  read_data.py  result_file.py  result_file_test.py  write_data.py
python/branchedflowsim/observers/: observer.py  observer_test.py
python/branchedflowsim/results/: __init__.py  angle_histograms.py  angular_density.py  caustics.py  density.py  empy_results_cpp_test.py  result_files_test.py  trajectories.py  velocity_histograms.py  velocity_transitions.py
python/branchedflowsim/utils/: __init__.py  convenience.py  experiment.py
python/codegen/: codegen.py  incoming_codegen.py  observer_codegen.py  utilities.py
python/examples/: 01_create.py  02_trace.py  03_reduce.py
src/: CMakeLists.txt  doc.dox  doxyfile.in
src/common/: CMakeLists.txt  caustic.cpp  caustic.hpp  dynamic_grid.hpp  dynamic_grid_base.cpp  dynamic_grid_base.hpp  fileIO.cpp  fileIO.hpp  global.hpp  grid_storage.cpp  grid_storage.hpp  interpolation.cpp  interpolation.hpp  multiindex.cpp  multiindex.hpp  potential.cpp  potential.hpp  profiling.cpp  profiling.hpp  util.hpp  vector.hpp
src/common/args/: argument_set.cpp  argument_set.hpp  error.cpp  error.hpp  spec.cpp  spec.hpp  usage.cpp  usage.hpp  value.cpp  value.hpp
src/common/factory/: builder_base.cpp  builder_base.hpp  factory.cpp  factory.hpp
src/common/test/: CMakeLists.txt  args_usage_test.cpp  argset_test.cpp  argspec_test.cpp  argval_test.cpp  caustic_test.cpp  dynamic_grid_test.cpp  factory_test.cpp  fileio_test.cpp  global_test.cpp  linear_interpolation_test.cpp  multiindex_test.cpp  potential_test.cpp
src/examples/: example_observer.cpp  example_observer.hpp
src/potgen/: CMakeLists.txt  config.h.in  correlation.cpp  correlation.hpp  discretize.cpp  discretize.hpp  fft.cpp  fft.hpp  potgen.cpp  potgen.hpp  potgen_args.cpp  potgen_args.h  potgen_main.cpp  randomize.cpp  randomize.hpp
src/potgen/test/: binary_cmp.cpp  corfun_test.cpp  derivatives_test.cpp  discretize_test.cpp  fft_test.cpp  potgen_fn_test.cpp  potgen_internals_test.cpp  potgen_test.cpp
src/test/: CMakeLists.txt  binary_cmp.cpp  test_helpers.cpp  test_helpers.hpp
src/tracer/: CMakeLists.txt  initial_conditions_fwd.hpp  main.cpp  ode_state.cpp  ode_state.hpp  python_glue.cpp  state.cpp  state.hpp  trace_args.cpp  trace_args.h  tracer.cpp  tracer.hpp  tracer_factory.cpp  tracer_factory.h
src/tracer/dynamics/: ParticleInPotentialDynamics.cpp  ParticleInPotentialDynamics.hpp  ParticleInScaledPotential.cpp  ParticleInScaledPotential.hpp  dynamics_factory.cpp  dynamics_factory.hpp  monodromy.hpp  ray_dynamics.hpp  sound.cpp  sound.hpp
src/tracer/initial_conditions/: generic_form.cpp  generic_form.hpp  init_factory.cpp  init_factory.hpp  initial_conditions.cpp  initial_conditions.hpp  planar_wave.cpp  planar_wave.hpp  radial_wave.cpp  radial_wave.hpp
src/tracer/observers/: angular_histogram_obs.cpp  angular_histogram_obs.hpp  caustic_observer.cpp  caustic_observer.hpp  density_observer.cpp  density_observer.hpp  density_worker.cpp  density_worker.hpp  energy_error_observer.cpp  energy_error_observer.hpp  master_observer.cpp  master_observer.hpp  observer.cpp  observer.hpp  observer_factory.cpp  observer_factory.hpp  radial_density_observer.cpp  radial_density_observer.hpp  trajectory_observer.cpp  trajectory_observer.hpp  velocity_histogram_observer.cpp  velocity_histogram_observer.hpp  velocity_transition_observer.cpp  velocity_transition_observer.hpp  wavefront_observer.cpp  wavefront_observer.hpp
src/tracer/observers/test/: observer_test.cpp  write_empty.cpp
src/tracer/test/: init_cond_cmdline.cpp  init_cond_test.cpp  observer_test.cpp  planar_init_test.cpp  radial_init_test.cpp  sound_test (copy).cpp  sound_test.cpp  tracer_test.cpp  utils.hpp
test/: make_ref.sh  pot_2d_128_ref
